[package]
name = "stacktools"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
description = "Helper to deal with data structures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Freyskeyd/stacktools.git"
homepage = "https://github.com/Freyskeyd/stacktools"
documentation = "http://docs.rs/stacktools/"
readme = "README.md"
keywords = ["data", "collection", "structure", "queue", "stack"]

[dependencies]

